--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
-/*body {background:#000000; color:#FFFFFF;*/}
-body {background:RED; color:#FFFFFF;}
+body {background:#000000; color:#FFFFFF;}
+/*body {background:RED; color:#FFFFFF;}*/
 
 @import url(reset.css);
 
